--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "firebase": "^8.6.2",
+    "logger": "^0.0.1",
     "node": "^16.1.0",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
